# thesis-desi-cmb-fli

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/inference/: config.yaml
docs/: pipeline.md
env/: environment.yml
scripts/: analyze_run.py  benchmark_highz_cl_modes.py  make_abacus_kappa_mask.py  plot_2D_maps.py  plot_highz_correction_vs_depth.py  plot_lensing_fraction.py  plot_linear_vs_nbody.py  quick_cl_spectra.py  quick_pk_spectra.py  run_inference.py
src/desi_cmb_fli/: bricks.py  chains.py  cmb_lensing.py  metrics.py  model.py  nbody.py  samplers.py  validation.py
tests/: test_bricks_geometry.py  test_cmb_lensing.py  test_evolution.py  test_fourier_gaussian.py  test_physics_validation.py  test_pixel_exact_likelihood.py
