[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desi-cmb-fli"
version = "0.2.0"
description = "Scaffold for DESI × CMB lensing field-level inference thesis work"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jonathan Hawla", email = "jonathan.hawla@icloud.com"}]
keywords = [
    "cosmology",
    "field-level inference",
    "DESI",
    "Planck",
    "ACT",
    "CMB lensing",
    "large-scale structure",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pyyaml>=6.0",
  "fitsio>=1.2",
  # JAX ecosystem — keep <0.10.0 for numpyro/diffrax compatibility on NERSC
  # jax_cosmo: use ASKabalan fork (adds _compute_growth_tables, growth_factor_second etc.)
  # Install with: pip install "jax[cuda12]==0.9.2" jaxlib==0.9.2 --upgrade
  "jax>=0.6.1,<0.10.0",
  "jaxlib>=0.6.1,<0.10.0",
  "jax_cosmo@git+https://github.com/ASKabalan/jax_cosmo@ALL-MODIF",
  "numpyro>=0.20.0",
  "jaxpm@git+https://github.com/DifferentiableUniverseInitiative/JaxPM.git@41-spherical-lensing",
  "jax-healpy@git+https://github.com/CMBSciPol/jax-healpy.git@maintaint-shapes-batching",
  "diffrax>=0.4.0",
  "blackjax>=1.3",
  "getdist>=1.4",
  "corner>=2.1.0",
  "astropy>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel",
  "jupyterlab",
  "matplotlib",
  "pandas>=2.1",
]
abacus = [
  "healpy>=1.16",
  "asdf>=3.0",
  "abacusutils>=1.0",
]
cmb = [
  # pymaster (NaMaster) requires CFITSIO at build time — install via conda:
  # conda install -c conda-forge namaster
  # "pymaster",  # uncomment if a wheel is available in your environment
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --color=yes"
filterwarnings = [
    "ignore:pkg_resources is deprecated:UserWarning",
    "ignore:Explicitly requested dtype.*is not available.*will be truncated:UserWarning",
]
